# gonk

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
db/: classes.sql  entities.sql  enumerators.sql  enums.sql  files.sql  functions.sql  gonk.sql  metadata.sql  modules.sql  source_locations.sql  statements.sql  types.sql
debugger/: CMakeLists.txt  client.cpp  client.h  json-stream-parser.h  message-reader.h  message.cpp  message.h  server.cpp  server.h
dependencies/: CMakeLists.txt
examples/: hybrid-module.gnk  main-args.gnk  math.gnk  qbytearray.gnk  qstring.gnk  raise.gnk  regex.gnk
include/gonk/: builtins.h  cli-parser.h  cli.h  functioncreator.h  gonk-defs.h  gonk.h  gonkmodule.h  modules.h  plugin.h  pretty-print.h  script-runner.h  version.h
include/gonk/common/: dependent-false.h  enums.h  pointer.h  semvalue.h  types.h  value.h  values.h
include/gonk/common/binding/: chainable-memfn.h  class.h  constructor.h  constructor_binder.h  conversion.h  default_arguments.h  destructor.h  destructor_binder.h  enum.h  fn-memfn.h  function.h  getter.h  memberfunction.h  namespace.h  newfunction.h  operators.h  pointer.h  staticmemberfunction.h
include/gonk/common/wrappers/: chainable_member_wrapper.h  conv-wrapper.h  enum-wrappers.h  function_wrapper.h  member_wrapper.h  newfunction_wrapper.h  operator_wrapper.h  reference_member_wrapper.h
include/gonk/templates/: pointer-template.h
plugins/: CMakeLists.txt
plugins/gonk-debugger/: CMakeLists.txt  ast-producer.h  breakpoint-handler.cpp  breakpoint-handler.h  communication-handler.cpp  communication-handler.h  gonk-debugger-defs.h  gonk-debugger.cpp  gonk-debugger.h  gonkmodule  json-stream-parser.h  message.h  value-serializer.cpp  value-serializer.h
plugins/gonk-test-hybrid-module/: CMakeLists.txt  gonk-test-hybrid-module-defs.h  gonk-test-hybrid-module.cpp  gonk-test-hybrid-module.h  gonkmodule  test-hybrid-module.gnk
plugins/qt-core/: CMakeLists.txt  bytearray.cpp  bytearray.h  char_.cpp  char_.h  dir.cpp  dir.h  gonkmodule  qt-core-defs.h  qt-core.cpp  qt-core.h  string.cpp  string.h
plugins/qt-core/db/: classes.sql  entities.sql  enumerators.sql  enums.sql  files.sql  functions.sql  metadata.sql  module_info.ini  namespaces.sql  source_locations.sql  types.sql
plugins/std-inttypes/: CMakeLists.txt  gonkmodule  std-inttypes-defs.h  std-inttypes.cpp  std-inttypes.h
plugins/std-map/: CMakeLists.txt  gonkmodule  map.cpp  map.h  std-map-defs.h  std-map.cpp  std-map.h
plugins/std-math/: CMakeLists.txt  gonkmodule  math.cpp  math.h  std-math-defs.h  std-math.cpp  std-math.h
plugins/std-regex/: CMakeLists.txt  gonkmodule  regex.cpp  regex.h  std-regex-defs.h  std-regex.cpp  std-regex.h
plugins/std-vector/: CMakeLists.txt  gonkmodule  std-vector-defs.h  std-vector.cpp  std-vector.h  vector.cpp  vector.h
scripts/: make-release.bat.in
src/: builtins.cpp  cli.cpp  functioncreator.cpp  gonk.cpp  gonkmodule.cpp  main.cpp  modules.cpp  plugin.cpp  pretty-print.cpp  script-runner.cpp  version.cpp
src/common/: semvalue.cpp  value.cpp
src/common/binding/: default_arguments.cpp
src/templates/: pointer-template.cpp
templates/: generate_all_classes.liquid  generate_class.liquid  generate_enum.liquid  generate_function.liquid  generate_make_type_helpers.liquid  generate_typeid_list.liquid  generate_wrapper.liquid  get_funaddr.liquid  needs_wrapper.liquid
tests/: CMakeLists.txt  gonk-test-resources.h.in  map.gnk  test.cpp  testsuite.cpp  unittests.cpp  vector.gnk
tests/suite/: hybrid-module.gnk
tools/: CMakeLists.txt
tools/gonkdbg/: CMakeLists.txt  breakpointsview.cpp  breakpointsview.h  callstackview.cpp  callstackview.h  client.cpp  client.h  code-viewer.cpp  code-viewer.h  controller.cpp  controller.h  debugger-client.cpp  debugger-client.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  syntax-highlighting.cpp  syntax-highlighting.h  syntaxhighlighter.cpp  syntaxhighlighter.h  variablesview.cpp  variablesview.h
tools/gonkgen/: CMakeLists.txt  main.cpp
tools/meta/: CMakeLists.txt  controller.cpp  controller.h  cppparser.cpp  cppparser.h  database-exporter.cpp  database-exporter.h  database.cpp  database.h  generator.cpp  generator.h  liquid-generator.cpp  liquid-generator.h  main.cpp  mainwindow.cpp  mainwindow.h  project-controller.cpp  project-controller.h  project-loader.cpp  project-loader.h  project-merger.cpp  project-merger.h  project.cpp  project.h
tools/meta/dialogs/: metadataeditordialog.cpp  metadataeditordialog.h  newfunctiondialog.cpp  newfunctiondialog.h  newtypedialog.cpp  newtypedialog.h  statementeditor.cpp  statementeditor.h
tools/meta/project/: class.cpp  class.h  enum.cpp  enum.h  file.cpp  file.h  function.cpp  function.h  module.cpp  module.h  namespace.cpp  namespace.h  node-visitor.h  node.cpp  node.h  statement.cpp  statement.h  type.cpp  type.h
tools/meta/widgets/: moduletreewidget.cpp  moduletreewidget.h  typetreewidget.cpp  typetreewidget.h
tools/meta/widgets/editors/: abstractnodeeditor.cpp  abstractnodeeditor.h  classnodeeditor.cpp  classnodeeditor.h  enumnodeeditor.cpp  enumnodeeditor.h  filenodeeditor.cpp  filenodeeditor.h  functionnodeeditor.cpp  functionnodeeditor.h  namespacenodeeditor.cpp  namespacenodeeditor.h  simplenodeeditor.cpp  simplenodeeditor.h
tools/meta/wizards/: importwizard.cpp  importwizard.h
tools/meta/wizards/import/: importpage.cpp  importpage.h  selectinputspage.cpp  selectinputspage.h  startimportpage.cpp  startimportpage.h
